refactor: 补充遗漏提交
补充遗漏提交

--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,7 @@
     <artifactId>jdk</artifactId>
     <version>1.0.0</version>
 
-    <modules>
-        <module>deploy</module>
-        <module>source</module>
-    </modules>
-
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -29,19 +24,19 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <finalName>rt-debug</finalName>
+<!--    <build>-->
+<!--        <finalName>rt-debug</finalName>-->
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-jar-plugin</artifactId>-->
+<!--                <version>2.4</version>-->
 
-                <configuration>
-                    <outputDirectory>${java.home}/lib/endorsed/</outputDirectory>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<!--                <configuration>-->
+<!--                    <outputDirectory>${java.home}/lib/endorsed/</outputDirectory>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
